fully fixed mask, working config

--- a/samples/experim_load_dataset.ipynb
+++ b/samples/experim_load_dataset.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,8 +21,8 @@
     "import csv\n",
     "\n",
     "# NOTE: change the home directory name here\n",
-    "WAD_TRAIN_COLOR = \"/home/stevenzc/.kaggle/competitions/cvpr-2018-autonomous-driving/train_color/\"\n",
-    "WAD_TRAIN_LABEL = \"/home/stevenzc/.kaggle/competitions/cvpr-2018-autonomous-driving/train_label/\"\n",
+    "WAD_TRAIN_COLOR = \"/home/stevenzc/cvpr-2018-autonomous-driving/train_color/\"\n",
+    "WAD_TRAIN_LABEL = \"/home/stevenzc/cvpr-2018-autonomous-driving/train_label/\"\n",
     "\n",
     "im_files = glob.glob(os.path.join(WAD_TRAIN_LABEL, '*.jpg'))\n",
     "label_files = glob.glob(os.path.join(WAD_TRAIN_LABEL, '*.png'))"
@@ -36,6 +36,29 @@
    "source": [
     "label_file = label_files[5]\n",
     "label_im = skimage.io.imread(label_file) # skimage read works properly, don't use cv2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "(2710, 3384)\n"
+     ]
+    }
+   ],
+   "source": [
+    "im = \"/home/stevenzc/cvpr-2018-autonomous-driving/train_label/170908_085412141_Camera_5_instanceIds.png\"\n",
+    "label_im = skimage.io.imread(im)\n",
+    "\n",
+    "(a, b) = get_masks(label_im)\n",
+    "print(len(a))\n",
+    "print(b.shape)"
    ]
   },
   {
@@ -87,43 +110,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "def get_masks(label_im):\n",
-    "    \"\"\"Return lists of binary masks and ids corresponding to instances.\n",
-    "    \n",
-    "    Params:\n",
-    "        label_im - label mask image from WAD as 2D numpy array\n",
-    "    \n",
-    "    Returns:\n",
-    "        ids - list of ids corresponding to instance masks\n",
-    "        masks - list of binary masks, each corresponding to one instance\n",
-    "    \"\"\"\n",
-    "    instances = np.unique(label_im)\n",
-    "    ids = []\n",
-    "    masks = []\n",
-    "    \n",
-    "    wad_to_ours = {\n",
-    "        33: 1,\n",
-    "        34: 2,\n",
-    "        35: 3,\n",
-    "        36: 4,\n",
-    "        38: 5,\n",
-    "        39: 6,\n",
-    "        40: 7\n",
-    "    }\n",
-    "    \n",
-    "    for instance in instances:\n",
-    "        if instance != 255 and instance != 65535:\n",
-    "            wad_id = int(instance / 1000)\n",
-    "            our_id = wad_to_ours[wad_id]\n",
-    "            mask = (label_im == instance)\n",
-    "            ids.append(our_id)\n",
-    "            masks.append(mask)\n",
-    "    \n",
-    "    return (ids, masks)"
+    "\t\t\"\"\"Return lists of binary masks and ids corresponding to instances.\n",
+    "\tParams:\n",
+    "\t    label_im - label mask image from WAD as 2D numpy array\n",
+    "\tReturns:\n",
+    "\t    ids - list of ids corresponding to instance masks\n",
+    "\t    masks - list of binary masks, each corresponding to one instance\n",
+    "\t\"\"\"\n",
+    "\t\tinstances = np.unique(label_im)\n",
+    "\t\tids = []\n",
+    "\t\tmasks = []\n",
+    "\n",
+    "\t\twad_to_ours = {\n",
+    "\t\t\t33: 1,\n",
+    "\t\t\t34: 2,\n",
+    "\t\t\t35: 3,\n",
+    "\t\t\t36: 4,\n",
+    "\t\t\t38: 5,\n",
+    "\t\t\t39: 6,\n",
+    "\t\t\t40: 7\n",
+    "\t\t}\n",
+    "\n",
+    "\t\tfor instance in instances:\n",
+    "\t\t\tif instance != 255 and instance != 65535:\n",
+    "\t\t\t\twad_id = int(instance / 1000)\n",
+    "\t\t\t\tif wad_id not in wad_to_ours:\n",
+    "\t\t\t\t\tcontinue\n",
+    "\t\t\t\tour_id = wad_to_ours[wad_id]\n",
+    "\t\t\t\tmask = (label_im == instance)\n",
+    "\t\t\t\t# reduce size of mask by factor of 2\n",
+    "\t\t\t\tmask = mask.astype(np.int8)\n",
+    "\t\t\t\tids.append(our_id)\n",
+    "\t\t\t\tmasks.append(mask)\n",
+    "\t\tif len(ids) == 0:\n",
+    "\t\t\treturn [0], np.zeros_like(label_im).astype(np.int8)\n",
+    "\t\t# print(\"NUM INSTANCES: \", len(ids), len(masks), 'MASK SIZE: ', masks[0].shape)\n",
+    "\t\treturn ids, np.stack(masks,axis=2)"
    ]
   },
   {
@@ -173,7 +200,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# TODO(stevenzc): debug this image it gets the bug: 170908_085412141_Camera_5_instanceIds.png"
+   ]
   }
  ],
  "metadata": {
