create original wad config for multiframe

--- a/samples/inference.ipynb
+++ b/samples/inference.ipynb
@@ -22,6 +22,13 @@
       "  from ._conv import register_converters as _register_converters\n",
       "Using TensorFlow backend.\n"
      ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/home/stevenzc/Mask_RCNN/mask_rcnn_coco.h5\n"
+     ]
     }
    ],
    "source": [
@@ -58,7 +65,9 @@
     "    utils.download_trained_weights(COCO_MODEL_PATH)\n",
     "\n",
     "# Directory of COCO images to run detection on (We will use a different directory later)\n",
-    "IMAGE_DIR = os.path.join(ROOT_DIR, \"images\")"
+    "IMAGE_DIR = os.path.join(ROOT_DIR, \"images\")\n",
+    "\n",
+    "print(COCO_MODEL_PATH)"
    ]
   },
   {
